kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catdog-platform
  labels:
    app.kubernetes.io/name: production-kubernetes-platform
    app.kubernetes.io/part-of: catdog-voting
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
